...
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_edit_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="취소"
            android:textColor="@color/text_primary"
...

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_edit_save"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@color/text_secondary"
            android:text="저장"
            android:textColor="@color/bg"
...
