<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F6F0"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp">

        <!-- 앱 로고 -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="앱 로고"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/logoImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintTextColor="@android:color/transparent"
            app:hintEnabled="false"
            app:placeholderText="@null"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_bg"
                android:hint="아이디를 입력하세요"
                android:textColor="#1B1E33"
                android:textColorHint="#B0B0B0"
                android:textSize="16sp"
                android:textCursorDrawable="@drawable/edittext_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 비밀번호 입력 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilLoginId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:hintTextColor="@android:color/transparent"
            app:hintEnabled="false"
            app:placeholderText="@null"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_bg"
                android:hint="비밀번호"
                android:inputType="textPassword"
                android:textColor="#1B1E33"
                android:textColorHint="#B0B0B0"
                android:textSize="16sp"
                android:textCursorDrawable="@drawable/edittext_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D32F2F"
            android:textSize="14sp"
            android:visibility="invisible"
            android:text="아이디와 비밀번호를 확인해주세요."
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- 로그인 버튼 -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:text="로그인"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            app:backgroundTint="#2D3142"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" />

        <!-- 회원가입으로 이동 -->
        <TextView
            android:id="@+id/tvGoSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="계정이 없으신가요? 회원가입 하러가기"
            android:textColor="#666666"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
